Bug 917492 - The error message overlapped with the original content in scaling page of jbosseap apps on Iphone4S

--- a/console/app/assets/stylesheets/console/_tile.scss
+++ b/console/app/assets/stylesheets/console/_tile.scss
@@ -3,6 +3,10 @@
   margin-bottom: 20px; 
   background-color: #222;
   color: #b0b0b0;
+  
+  h2 {
+    @include clearfix();
+  }
 
   > p {
     margin-bottom: $baseLineHeight / 1.5;
